signup page layout

--- a/src/App.css
+++ b/src/App.css
@@ -29,6 +29,26 @@
   background-color: skyblue;
 }
 
+.inputBox{
+  display: block;
+  margin: 25px;
+  padding: 7px;
+  width: 300px;
+  border: 1px solid skyblue;
+}
+.appButton{
+  margin: 25px;
+  padding: 10px;
+  width: 150px;
+  background-color: skyblue;
+  border: 1px solid;
+  cursor: pointer;
+}
+
+.register{
+  margin-left: 30%;
+}
+
 .App-header {
   background-color: #282c34;
   min-height: 100vh;
