--- a/src/App.css
+++ b/src/App.css
@@ -52,6 +52,18 @@
   margin-left: 30%;
 }
 
+.logo{
+  width: 45px;
+    float: left;
+    border-radius: 50%;
+    margin-top: 2px;
+    margin-left: 6px;
+}
+
+.nav-right{
+  text-align: right;
+}
+
 .App-header {
   background-color: #282c34;
   min-height: 100vh;
